Updated image Styles and Links Added to recipes

--- a/recipes/jollof-rice.html
+++ b/recipes/jollof-rice.html
@@ -6,8 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <img src="img/jollof-rice.webp" alt="Jollof Rice Image">
+    <h1 id="header">Odin Recipes</h1>
+    <img src="img/jollof-rice.webp" alt="Jollof Rice Image" style="width: 400 px; height: 250px;">
     <p>This bold-flavored jollof rice, my version of the dish served all over West Africa, will go well with any spicy chicken, meat, or fish.</p>
     <h2>Ingredients</h2>
     <h3>Blended Sauce</h3>
@@ -43,5 +43,9 @@
         <li>Turn the heat down to low, cover the pot and cook until rice has absorbed all the liquid, adding more stock if needed to soften the rice, about 10 minutes.</li>
         <li>Stir in mixed vegetables and butter. Cover, and let cook for 5 minutes. Turn heat off, allow the steam to finish cooking vegetables, about 5 minutes more. Stir before serving.</li>
     </ol>
+
+    <a href="#header">Return to Top</a>
+    <br/>
+    <a href="../index.html">Return to Index</a>
 </body>
 </html>
