--- a/recipes/sangria.html
+++ b/recipes/sangria.html
@@ -6,8 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <img src="img/sangria.webp" alt="Sangría Image">
+    <h1 id="header">Odin Recipes</h1>
+    <img src="img/sangria.webp" alt="Sangría Image" style="width: 400 px; height: 250px;">
     <p>Sangria is an alcoholic punch that originated in Spain and Portugal. There are two common varieties: red sangria and white sangria. It's typically made with wine, liqueur, sparkling water, fruit juice, and lots of sliced fruit.</p>
     <h2>Ingredients</h2>
     <ul>
@@ -27,5 +27,9 @@
         <li>Refrigerate overnight</li>
         <li>Add carbonated water</li>
     </ol>
+
+    <a href="#header">Return to Top</a>
+    <br/>
+    <a href="../index.html">Return to Index</a>
 </body>
 </html>
