--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
+    <h1 id="header">Odin Recipes</h1>
+    <img src="recipes/img/chef.jpg" alt="Chef Image" style="width: 400 px; height: 250px;">
     <ul>
         <li><a href="recipes/sangria.html">Sangría</a></li>
         <li><a href="recipes/jollof-rice.html">Jollof Rice</a></li>
         <li><a href="recipes/cherry-cola-ribs.html">Cherry Cola Ribs</a></li>
     </ul>
+
+    <a href="#header">Return to Top</a>
 </body>
 </html>
