--- a/recipes/cherry-cola-ribs.html
+++ b/recipes/cherry-cola-ribs.html
@@ -6,8 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <img src="img/cherry-cola-ribs.webp" alt="Cherry Cola Ribs Image">
+    <h1 id="header">Odin Recipes</h1>
+    <img src="img/cherry-cola-ribs.webp" alt="Cherry Cola Ribs Image" style="width: 400 px; height: 250px;">
     <p>I've come to find out that cherry cola makes an incredibly delicious rack of ribs, which strangely enough, don't really taste like either cherry or cola, but taste very similar to your All-American Midwest-style barbecue.</p>
     <h2>Ingredients</h2>
     <h3>Dry Rub</h3>
@@ -51,5 +51,9 @@
         <li>Brush ribs with sauce. Return ribs to the oven for 15 minutes. Repeat this process, brushing ribs with sauce every 15 minutes, until ribs are tender and come easily off the bone, about 1 hour more. (See Note)</li>
         <li>Let ribs rest for about 10 minutes. Slice between each rib with a sharp knife, and serve with extra sauce.</li>
     </ol>
+
+    <a href="#header">Return to Top</a>
+    <br/>
+    <a href="../index.html">Return to Index</a>
 </body>
 </html>
